adding ress paper

--- a/diss.tex
+++ b/diss.tex
@@ -75,7 +75,7 @@
   %\include{bibliographie}
   %\addcontentsline{toc}{chapter}{\protect Bibliography}
   \bibliographystyle{plainnat}
-  \bibliography{bib/eigene_121018}
+  \bibliography{bib/eigene}
   \markboth{Bibliography}{Bibliography}
 
  % \include{danksagung}
