--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -1,7 +1,8 @@
 \chapter{Generalized Bayesian Inference with Sets of Priors}
 
 \begin{itemize}
-\item Introduction to IP (sets of priors, lower/upper prevision/probability)
+\item Short introduction to IP (sets of priors, lower/upper prevision/probability)
+\item motivate imprecise priors with ress paper: \cite{Walter2013a}
 \item Generalized Bayesian inference
 \item Generalized Bayesian inference with sets of priors
  \begin{itemize}
