--- a/intro.tex
+++ b/intro.tex
@@ -5,6 +5,7 @@
 \item overview, which paper used where\ldots
 \item statistical inference (\textbf{StatInf chapter}, \cite{itip-statinf})
 \item Bayesian inference, conjugate priors, etc. (\textbf{TechRep Dirichlet}, \cite{Walter2012b})
+\item motivate priors etc.\ with ress paper: \cite{Walter2013a}
 \item short part on decision theory, updating rules?
 \item \pdc\ (Evans \& Moshonov), examples (\textbf{Festschrift paper}, \cite{Walter2010a})
 \item other motivations for IP?
