intro on statistical inference

--- a/defs.tex
+++ b/defs.tex
@@ -3,3 +3,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \def\pdc{prior-data conflict}
+
+\newcommand{\reals}{\mathbb{R}}
+
+\newcommand{\dd}{\,\mathrm{d}}
+
+\newcommand{\mbf}[1]{\mathbf{#1}}
+
+\newcommand{\X}{\mbf{X}}
+\newcommand{\x}{\mbf{x}}
