--- a/head.tex
+++ b/head.tex
@@ -12,6 +12,10 @@
 \usepackage{natbib}
 \usepackage[nottoc,numbib]{tocbibind}
 
+\usepackage{amsfonts}
+\usepackage{amssymb}
+
+
 \usepackage[bookmarks]{hyperref}
 
 
