--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -19,3 +19,20 @@
     Publisher = {Wiley},
     Address = {Chichester},
     Year = {2000}}
+
+@article{1987:gillies,
+    Author = {Gillies, D.},
+    Doi = {10.1016/0315-0860(87)90065-6},
+    Journal = {Historia Mathematica},
+    Pages = {325--346},
+    Title = {Was {B}ayes a {B}ayesian?},
+    Volume = {14},
+    Year = {1987},
+    Bdsk-Url-1 = {http://dx.doi.org/10.1016/0315-0860(87)90065-6}}
+
+@book{2000:gillies,
+    Address = {New York},
+    Author = {D. Gillies},
+    Publisher = {Routledge},
+    Title = {Philosophical Theories of Probability},
+    Year = {2000}}
