sample model examples

--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -36,3 +36,10 @@
     Publisher = {Routledge},
     Title = {Philosophical Theories of Probability},
     Year = {2000}}
+
+@book{1968:breiman,
+    Address = {Reading, Mass},
+    Author = {Breiman, L.},
+    Publisher = {Addison-Wesley},
+    Title = {Probability},
+    Year = {1968}}
