--- a/defs.tex
+++ b/defs.tex
@@ -12,3 +12,9 @@
 
 \newcommand{\X}{\mbf{X}}
 \newcommand{\x}{\mbf{x}}
+
+\newcommand{\mult}{\operatorname{M}}    % Multinomial Distribution
+\newcommand{\norm}{\operatorname{N}}    % Normal Distribution
+\newcommand{\ber}{\operatorname{Ber}}   % Bernoulli Distribution
+\newcommand{\bin}{\operatorname{Binom}} % Binomial Distribution
+\newcommand{\be}{\operatorname{Beta}}   % Beta Distribution
