regular conjugate priors

--- a/defs.tex
+++ b/defs.tex
@@ -9,9 +9,58 @@
 \newcommand{\dd}{\,\mathrm{d}}
 
 \newcommand{\mbf}[1]{\mathbf{#1}}
+\def\bs#1{\boldsymbol{#1}}
 
 \newcommand{\X}{\mbf{X}}
 \newcommand{\x}{\mbf{x}}
+
+\newcommand{\uz}{^{(0)}} % upper zero
+\newcommand{\un}{^{(n)}} % upper n
+
+\def\yz{y\uz}
+\def\yn{y\un}
+
+\def\yzl{\ul{y}\uz}
+\def\yzu{\ol{y}\uz}
+
+\def\ynl{\ul{y}\un}
+\def\ynu{\ol{y}\un}
+
+\def\nz{n\uz}
+\def\no{n\uo}
+\def\nn{n\un}
+
+\def\nzl{\ul{n}\uz}
+\def\nzu{\ol{n}\uz}
+
+\def\nnl{\ul{n}\un}
+\def\nnu{\ol{n}\un}
+
+\def\taux{\tau(x)}
+\def\ttau{\tilde{\tau}}
+\def\ttaux{\ttau(x)}
+
+\def\Y{\mathcal{Y}}
+\def\YZ{\Y\uz}
+\def\YN{\Y\un}
+\def\N{\mathcal{N}}
+\def\NZ{\N\uz}
+\def\NN{\N\un}
+\def\PZ{\text{I}\!\Pi\uz}
+%\def\PZero{\PZ}
+\def\PN{\text{I}\!\Pi\un}
+\def\MZ{\mathcal{M}\uz}
+\def\MN{\mathcal{M}\un}
+
+\newcommand{\p}{\operatorname{P}}
+\newcommand{\E}{\operatorname{E}}
+\newcommand{\V}{\operatorname{Var}}
+
+\def\El{\ul{\E}}
+\def\Eu{\ol{\E}}
+
+\def\Pl{\ul{\p}}
+\def\Pu{\ol{\p}}
 
 \newcommand{\mult}{\operatorname{M}}    % Multinomial Distribution
 \newcommand{\norm}{\operatorname{N}}    % Normal Distribution
