--- a/intro.tex
+++ b/intro.tex
@@ -93,10 +93,43 @@ $p_\vartheta^{\otimes n}$ thus has the probability mass or density function
 The term \emph{sample} is then also used for the concretely observed value(s) $\x=(x_1, \ldots, x_n)^T$.%
 \footnote{Throughout, random quantities are denoted by capital letters, their values, or realizations, by small letters.}
 
-Next, we will present two basic parametric models that will be repeatedly discussed further on.
+Next, we will present two examples for basic parametric models that will be repeatedly discussed further on.
+
+
+\subsection{The Normal Distribution}
+\label{sec:normaldist}
+
+A common model for observations that in principle can assume any value on the real line
+is the \emph{normal distribution} with parameters $\mu$ and $\sigma^2$, also called the \emph{Gaussian distribution}.
+Typical examples for data of this kind are scores in intelligence testing, or technical measurements in general.%
+\footnote{The normal distribution is distinguished by the central limit theorem
+(see, e.g., \cite[\S 7.3]{1993:karr}, or \cite[\S 9]{1968:breiman}), stating that, under regularity conditions,
+the distribution of an appropriately scaled sum of $n$ standardized random variables converges to a normal distribution
+for $n \longrightarrow \infty$.}
+
+For each observation $x_i$, $i=1,\ldots, n$, the normal probability density is
+\begin{align*}
+f_{(\mu, \sigma^2)}(x_{i}) &= \frac{1}{\sqrt{2\pi\sigma^2}}\exp\Big\{ -\frac{1}{2\sigma^2}(x_{i} - \mu)^2 \Big\}\,,
+\end{align*}
+with the two parameters $\mu \in \reals$ and $\sigma^2 \in \reals_{>0}$
+being in fact the mean and the variance of (the distribution of) $x_i$, respectively.
+As a shortcut, we write $x_i \sim \norm(\mu, \sigma^2)$.
+%a normal density with $\mu=0$ and $\sigma^2=1$ is displayed
+%in Figure~\ref{inference:fig:normal-vs-cauchy}, page~\pageref{inference:fig:normal-vs-cauchy}.
+
+With the independence assumption, the density of $\mbf{x} = (x_1,\ldots,x_n)$ amounts to
+\begin{align}\label{eq:normaldens}
+f_{(\mu, \sigma^2)}(\mbf{x})
+ &= \prod_{i=1}^n f_{(\mu, \sigma^2)}(x_{i})
+  = (2\pi\sigma^2)^{-\frac{n}{2}}\exp\Big\{ -\frac{1}{2\sigma^2}\sum_{i=1}^n (x_{i} - \mu)^2 \Big\}\,.
+\end{align}
+
+Later on, we restrict considerations to the case where the variance $\sigma_0^2$ is known, denoted by $x_i \sim \norm(\mu, \sigma_0^2)$.
+Inference may thus concern the parameter $\mu$ directly, or future observations $x_{n+1}, x_{n+2}, \ldots$ in a chain of i.i.d.\ observations.
 
 
 \subsection{The Multinomial Distribution}
+\label{sec:multinomdist}
 
 The \emph{multinomial distribution} is a common model for samples where only a limited number of distinct values can be observed.
 %like in the data from an election poll, or from a pharmacological study asking about a certain set of adverse reactions.
@@ -137,37 +170,6 @@ f_\theta(\mbf{n}) &= \binom{n}{n_1,\ldots,n_k} \prod_{j=1}^k \theta_j^{n_j}
 As a shortcut, we write $\mbf{n} \sim \mult(\theta)$.
 
 
-\subsection{The Normal Distribution}
-
-A common model for observations that in principle can assume any value on the real line
-is the \emph{normal distribution} with parameters $\mu$ and $\sigma^2$, also called the \emph{Gaussian distribution}.
-Typical examples for data of this kind are scores in intelligence testing, or technical measurements in general.%
-\footnote{The normal distribution is distinguished by the central limit theorem
-(see, e.g., \cite[\S 7.3]{1993:karr}, or \cite[\S 9]{1968:breiman}), stating that, under regularity conditions,
-the distribution of an appropriately scaled sum of $n$ standardized random variables converges to a normal distribution
-for $n \longrightarrow \infty$.}
-
-For each observation $x_i$, $i=1,\ldots, n$, the normal probability density is
-\begin{align*}
-f_{(\mu, \sigma^2)}(x_{i}) &= \frac{1}{\sqrt{2\pi\sigma^2}}\exp\Big\{ -\frac{1}{2\sigma^2}(x_{i} - \mu)^2 \Big\}\,,
-\end{align*}
-with the two parameters $\mu \in \reals$ and $\sigma^2 \in \reals_{>0}$
-being in fact the mean and the variance of (the distribution of) $x_i$, respectively.
-As a shortcut, we write $x_i \sim \norm(\mu, \sigma^2)$.
-%a normal density with $\mu=0$ and $\sigma^2=1$ is displayed
-%in Figure~\ref{inference:fig:normal-vs-cauchy}, page~\pageref{inference:fig:normal-vs-cauchy}.
-
-With the independence assumption, the density of $\mbf{x} = (x_1,\ldots,x_n)$ amounts to
-\begin{align}\label{eq:normaldens}
-f_{(\mu, \sigma^2)}(\mbf{x})
- &= \prod_{i=1}^n f_{(\mu, \sigma^2)}(x_{i})
-  = (2\pi\sigma^2)^{-\frac{n}{2}}\exp\Big\{ -\frac{1}{2\sigma^2}\sum_{i=1}^n (x_{i} - \mu)^2 \Big\}\,.
-\end{align}
-
-Later on, we restrict considerations to the case where the variance $\sigma_0^2$ is known, denoted by $x_i \sim \norm(\mu, \sigma_0^2)$.
-Inference may thus concern the parameter $\mu$ directly, or future observations $x_{n+1}, x_{n+2}, \ldots$ in a chain of i.i.d.\ observations.
-
-
 \section{Statistical Inference with the Bayesian Paradigm}
 \label{sec:bayes-inference}
 
@@ -194,7 +196,90 @@ The posterior distribution is understood as comprising all the information from 
 It therefore underlies all further inferences on the parameter $\vartheta$,
 like point estimators, interval estimators,
 or the \emph{posterior predictive distribution},
-which is the distribution of further observations based on $p(\vartheta\mid\mbf{x})$ (see below).
+which is the distribution of further observations based on $p(\vartheta\mid\mbf{x})$
+(see Eq.~\eqref{eq:posteriorpredictive} below).
 
 
+\subsection{Regular Conjugate Families of Distributions}
+
+Traditional Bayesian inference is frequently based on so-called \emph{conjugate priors} related to a specific likelihood.
+Such priors have the convenient property that the posterior resulting from~\eqref{eq:bayesrule}
+belongs to the same class of parametric distributions as the prior, and thus only the parameters have to be updated,
+which makes calculation of the posterior and thus the whole Bayesian inference easily tractable.
+
+Fortunately, there are general results guiding the construction of conjugate priors in models used most frequently in practice,
+namely in the case where the sample distribution belongs to a so-called \emph{(regular) canonical exponential family}
+\cite[pp.~202 and 272f]{2000:bernardosmith}. %Def.~4.12 and Prop.~5.6
+This indeed covers many sample distributions relevant in a statistician's everyday life,
+like Normal and Multinomial models, Poisson models, or Exponential and Gamma models.
+After presentation of the general framework, we will discuss its instantiation for the Normal
+and the Multinomial sampling models as introduced in Sections~\ref{sec:normaldist} and \ref{sec:multinomdist} above.
+
+A sample distribution
+(from now on understood directly as the distribution $p_\vartheta^{\otimes n}$ of an i.i.d.\ sample $\mbf{x}$ of size $n$)
+is said to belong to the \emph{(regular) canonical exponential family} if its density or mass function satisfies the decomposition
+\begin{align}\label{eq:expofam-sampledens}
+f(\x \mid \theta) &\propto \exp\big\{\langle \psi, \tau(\x) \rangle - n \mbf{b}(\psi)\big\}\,,
+\end{align}
+where $\psi \in \Psi \subset \reals^q$ is a transformation of the (possibly vectorial) parameter $\theta \in \Theta$,
+and $\mbf{b}(\psi)$ a scalar function of $\psi$ (or, in turn, of $\theta$).
+$\tau(\x)$ is a function of the sample $\x$ that fulfills $\tau(\x) = \sum_{i=1}^n \tau^*(x_i)$,
+with $\tau^*(x_i) \in \mathcal{T} \subset \reals^q$,
+while $\langle\cdot, \cdot\rangle$ denotes the scalar product.
+From these ingredients, a conjugate prior on $\psi$ can be constructed as%
+\footnote{In our notation, ${}\uz$ denotes prior parameters; ${}\un$ posterior parameters.}
+\begin{align}\label{eq:canonicalprior}
+p(\psi \mid \nz, \yz) \dd\psi
+ &\propto \exp\Big\{ \nz \Big[ \langle \yz, \psi \rangle - \mbf{b}(\psi) \Big] \Big\} \dd\psi\,,
+\end{align}
+where $\nz$ and $\yz$ are now the parameters by which a certain prior can be specified.
+The domain of $\yz$ is $\Y$, the interior of the convex hull of $\mathcal{T}$;
+$\nz$ must take strictly positive values for the prior to be proper (integrable to $1$).
+
+An interpretation for these parameters will be given shortly.
+First, let us calculate the posterior density for $\psi$.
+The prior parameters $\yz$ and $\nz$ are updated to their posterior values $\yn$ and $\nn$ in the following way:
+\begin{align}\label{eq:canonicalupdate}
+\yn &= \frac{\nz}{\nz + n} \cdot \yz + \frac{n}{\nz + n} \cdot \frac{\tau(\x)}{n}\,, &
+\nn &= \nz + n\,,
+\end{align}
+such that the posterior can be written as
+\begin{align}\label{eq:canonicalposterior}
+p(\psi \mid \x, \nz, \yz)
+ =: p(\psi \mid \nn, \yn)
+ &\propto \exp\Big\{ \nn \Big[ \langle \yn, \psi \rangle - \mbf{b}(\psi) \Big] \Big\} \dd\psi\,.
+\end{align}
+In this setting, $\yz$ and $\yn$ can be seen as the parameter describing the main characteristics of the prior and the posterior,
+and thus we will call them \emph{main prior} and \emph{main posterior parameter}, respectively.
+$\yz$ can also be understood as a prior guess for the random quantity $\ttau(\x) := \tau(\x)/n$ summarizing the sample,
+as $\E[\ttau(\x) \mid \psi] = \nabla\mbf{b}(\psi)$,
+where in turn $\E[\nabla\mbf{b}(\psi) \mid \nz, \yz] = \yz$ \cite{2000:bernardosmith}***more concrete***.
+
+Characteristically, $\yn$ is a weighted average of this prior guess $\yz$ and the sample `mean' $\ttau(\x)$,
+with weights $\nz$ and $n$, respectively.%
+\footnote{This weighted average property of Bayesian updating with conjugate priors is an important issue
+we comment on ***later / in Section~\ref{}***.}
+Therefore, $\nz$ can be seen as ``prior strength'' or ``pseudocounts'',
+reflecting the weight one gives to the prior as compared to the sample size $n$.
+To make this more explicit, $\nz$ can be interpreted as the size of an imaginary sample
+that corresponds to the trust on the prior information in the same way
+as the sample size of a real sample
+corresponds to the trust in conclusions based on such a real sample \cite[p.~258]{Walter2009a}.
+
+The posterior $p(\psi \mid \nn, \yn)$ can be transformed back to a distribution on $\theta$
+in order to deal with a commonly known parameter or distribution family for it
+(as we will do in Section~\ref{}*** below.)
+Besides the posterior itself, also the posterior predictive distribution
+\begin{align}
+\label{eq:posteriorpredictive}
+f(\x^*\mid\x) &= \int f(\x^* \mid \psi) p(\psi \mid \nn, \yn) \dd\psi\,,
+\end{align}
+a distribution on future samples $\x^*$ after having seen a sample $\x$,
+forms the basis for the different inference tasks. %as listed in Section~\ref{inference:sec:basictasks}.
+
+The concretion of this framework for Bayesian inference with regular conjugate priors
+is now demonstrated for the sampling models presented in Sections~\ref{sec:normaldist} and \ref{sec:multinomdist}.
+The framework for the Multinomial model (Section~\ref{sec:multinomdist})
+is then used for inferences in common-cause modeling,
+which will serve as a real-world example illustrating the powers and shortcomings of standard Bayesian inference.
 
