inference tasks section

--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -43,3 +43,12 @@
     Publisher = {Addison-Wesley},
     Title = {Probability},
     Year = {1968}}
+
+@book{2002:casella,
+  title={Statistical inference},
+  author={Casella, G. and Berger, R.L.},
+  isbn={9780534243128},
+  lccn={89027287},
+  series={Duxbury advanced series in statistics and decision sciences},
+  year={2002},
+  publisher={Thomson Learning}}
