--- a/defs.tex
+++ b/defs.tex
@@ -55,6 +55,8 @@
 \newcommand{\p}{\operatorname{P}}
 \newcommand{\E}{\operatorname{E}}
 \newcommand{\V}{\operatorname{Var}}
+\newcommand{\med}{\operatorname{med}} % Median
+\newcommand{\mode}{\operatorname{mode}} % Mode
 
 \def\El{\ul{\E}}
 \def\Eu{\ol{\E}}
