--- a/defs.tex
+++ b/defs.tex
@@ -69,3 +69,4 @@
 \newcommand{\ber}{\operatorname{Ber}}   % Bernoulli Distribution
 \newcommand{\bin}{\operatorname{Binom}} % Binomial Distribution
 \newcommand{\be}{\operatorname{Beta}}   % Beta Distribution
+\newcommand{\B}{\operatorname{B}}   % Beta Function
